app/assets/stylesheets/content/_attributes_key_value.sass
//-- copyright
// OpenProject is a project management system.
// Copyright (C) 2012-2018 the OpenProject Foundation (OPF)
//
// This program is free software; you can redistribute it and/or
// modify it under the terms of the GNU General Public License version 3.
//
// OpenProject is a fork of ChiliProject, which is a fork of Redmine. The copyright follows:
// Copyright (C) 2006-2017 Jean-Philippe Lang
// Copyright (C) 2010-2013 the ChiliProject Team
//
// This program is free software; you can redistribute it and/or
// modify it under the terms of the GNU General Public License
// as published by the Free Software Foundation; either version 2
// of the License, or (at your option) any later version.
//
// This program is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
// GNU General Public License for more details.
//
// You should have received a copy of the GNU General Public License
// along with this program; if not, write to the Free Software
// Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
//
// See docs/COPYRIGHT.rdoc for more details.
//++

.attributes-key-value
  @include grid-block
  @include grid-layout(2)
  @include grid-visible-overflow
  font-size: 0.875rem
  line-height: 1.6

  .attributes-key-value--key
    @extend .form--label
    @include grid-size(4)
    @include text-shortener
    margin-bottom: 0.1875rem
    padding: 0.375rem 0 !important
    font-weight: bold
    align-self: center

  .attributes-key-value--value-container
    @include grid-content(8)
    @include grid-visible-overflow
    display: flex
    margin-bottom: 0.1875rem
    padding: 0 !important
    align-self: center

    &.not-editable
      padding: 6px

    &.-minimal
      .wp-inline-edit--field
        width: 90px

  .attributes-key-value--value-separator
    margin: 0px 4px

    &:after
      display: inline
      content: '-'

  .attributes-key-value--value
    @include grid-visible-overflow

